# realtime-chat-backend

./: .env.tmp  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
app/: database.py  main.py  models.py  settings.py
app/user/: manager.py  models.py  utils.py
migrations/: env.py
migrations/versions/: 2024_05_13_2215-0df400df366d_initial.py
